--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
     </div>
+    <!-- Img container -->
+    <div class="image-container" id="image-container">
+        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
+        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
+        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
+        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
+    </div>
       <!-- Script  -->
     <script src="script.js"></script>
 </body>
