--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     <!-- Title -->
     <h1>UNSPLASH API - INFINITE SCROLL</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading">
     </div>
-    <!-- Img container -->
+    <!-- Image container -->
     <div class="image-container" id="image-container">
-        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
-        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
-        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
-        <img src="./photo-1597723624918-4d9318fff0cb.jpg" alt="picture">
-    </div>
+     </div>
       <!-- Script  -->
     <script src="script.js"></script>
 </body>
